resources/consulting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-consulting
spec:
  selector:
    matchLabels:
      app: consulting
  replicas: 1
  template:
    metadata:
      labels:
        app: consulting
    spec:
      containers:
      - name: consulting-app
        image: 370080849531.dkr.ecr.ap-northeast-2.amazonaws.com/consulting-service
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-consulting
spec:
  selector:
    app: consulting
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
