resources/dash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-dash
spec:
  selector:
    matchLabels:
      app: dash
  replicas: 1
  template:
    metadata:
      labels:
        app: dash
    spec:
      containers:
      - name: dash-app
        image: 370080849531.dkr.ecr.ap-northeast-2.amazonaws.com/dash-service
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-dash
spec:
  selector:
    app: dash
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
