resources/item.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-item
spec:
  selector:
    matchLabels:
      app: item
  replicas: 1
  template:
    metadata:
      labels:
        app: item
    spec:
      containers:
      - name: item-app
        image: 370080849531.dkr.ecr.ap-northeast-2.amazonaws.com/item-service
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-item
spec:
  selector:
    app: item
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
