resources/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-order
spec:
  selector:
    matchLabels:
      app: order
  replicas: 1
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order-app
        image: 370080849531.dkr.ecr.ap-northeast-2.amazonaws.com/order-service
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-order
spec:
  selector:
    app: order
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
