resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0889e2a4d6d693e13, subnet-0689de445b67b123e
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:370080849531:certificate/e9e8ebc3-29e3-4055-a3c8-08ee001d565a
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /stores
          pathType: Prefix
          backend:
            service:
              name: service-store
              port:
                number: 80
        - path: /categories
          pathType: Prefix
          backend:
            service:
              name: service-item
              port:
                number: 80
        - path: /orders
          pathType: Prefix
          backend:
            service:
              name: service-order
              port:
                number: 80
        - path: /sales
          pathType: Prefix
          backend:
            service:
              name: service-sale
              port:
                number: 80
        - path: /dashboard
          pathType: Prefix
          backend:
            service:
              name: service-dash
              port:
                number: 80
        - path: /consulting
          pathType: Prefix
          backend:
            service:
              name: service-consulting
              port:
                number: 80
        - path: /bff
          pathType: Prefix
          backend:
            service:
              name: service-bff
              port:
                number: 80
