resources/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-store
spec:
  selector:
    matchLabels:
      app: store
  replicas: 3
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: store-app
        image: 370080849531.dkr.ecr.ap-northeast-2.amazonaws.com/store-service
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-store
spec:
  selector:
    app: store
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-store
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-07dfacbaca88d08c6, subnet-059956a9fd9d2df09
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /stores
          pathType: Prefix
          backend:
            service:
              name: service-store
              port:
                number: 80
